force-app/main/default/objects/Record_accessed__e/Record_accessed__e.object-meta.xml
<CustomObject>
    <description>Platform event that is fired by an lwc component when that component is loaded and unloaded
just place this component on the detail page to fire this platform event</description>
    <label>Record accessed</label>
    <pluralLabel>Record accessed</pluralLabel>
</CustomObject>