force-app/main/default/objects/Record_accessed__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Record id of the opened record</description>
    <label>Record Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>