force-app/main/default/objects/Record_accessed__e/fields/Record_Opened__c.field-meta.xml
<CustomField>
    <fullName>Record_Opened__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When record is access, or else when closed</description>
    <label>Record Opened</label>
    <type>Checkbox</type>
</CustomField>