force-app/main/default/objects/Record_accessed__e/fields/Reply_back__c.field-meta.xml
<CustomField>
    <fullName>Reply_back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reply back</label>
    <type>Checkbox</type>
</CustomField>