force-app/main/default/objects/Record_accessed__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>unique component id generated by component</description>
    <label>UUID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>